@@ -1,3 +1,8 @@
+11/24/2004  version 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>
+
+    * Changed how the tree editor and renderers work so that the AdapterNode
+      doesn't have tree specific code in it.
+
 11/23/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>
 
     * Obsoleted the DefaultViewTreeNode class.
